- Fix generate-report bug where pidstat.txt was not being processed to create
  pidstat.csv files
- Fix generate-report HTML and PDF generation logic where .rst and .html files
  were not being processed correctly
- Fix generate-report handling of identifying driver and client processes
- Rewrite rst2html5.py's #! back to /usr/bin/env python3 for the AppImage

v0.49.1 (2023-02-17)

- Update pgsql-build-db to take database name as a command line argument
- Update to post-process script to install Julia packages only after verifying
  the Julia version of the script exists
- Add Z flag for mounting source directory when building the AppImage with
  container/build-appimage for shared volume labeling

v0.49.0 (2023-02-09)

- Fix use of ignore file for podman use
- Allow user to specify container engine
- Add some C directives to support building on older C tool chains, in
  particular CentOS 7
- Add AppImage files for creating standalone single binary with limited
  functionality
- Add Podman files for creating an AppImage
- Convert doc/ files to reStructuredText
- Reconstruct Changelog of information prior to v0.8 and remove old saved CVS
  ChangeLog
- Convert DBMS and OS READMEs to reStructuredText and incorporate them into the
  the doc/ directory
- Convert INSTALL to reStructuredText with updated instructions
- Reorganized PostgreSQL, SAP DB, and SQLite specific details from the user's
  guide into their respective section
- Update the user guide
- Update PostgreSQL documentation
- Build CockroachDB support only if PostgreSQL 11+ is available since
  pg_type_c.h is required for binary mode support
- Fix datagen partitioning logic
- Add tests to verify datagen partitioning correctness
- Add test to check output of post-process
- Port post-process script from R to Julia
- Distribute Julia and package post-process package dependencies in AppImage
- Driver automatically sets wmin and wmax to 1 and max warehouses, resp, if not
  specified on the command line